# wifi-controlled-robot

./: .gitignore  CMakeLists.txt  README.md
esp32-cam-code/: main.cpp
esp8266-code/: main.cpp
ui-desktop/include/: mainwindow.h  mqtt.h
ui-desktop/src/: main.cpp  mainwindow.cpp  mainwindow.ui
